--- a/hugo.toml
+++ b/hugo.toml
@@ -1,6 +1,6 @@
 baseURL = '/'
 languageCode = 'en-us'
-title = 'Hugo Template Version 001'
+title = 'Hugo Template Version 001 preview'
 theme = 'ananke'
 
 # Theme parameters
